frontend: fixed schedule overflow on mobile

--- a/frontend/src/components/App.module.css
+++ b/frontend/src/components/App.module.css
@@ -96,6 +96,10 @@
 
     min-height: 0;
     max-width: 100vw;
+
+    .hidden {
+        visibility: hidden;
+    }
 }
 
 .mainContent {
